# SecureShell

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MCP.md  README.md  SECURITY.md  pyproject.toml  secureshell.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
cookbook/: SECURITY_TEMPLATES.md  quickstart.py  quickstart.ts
cookbook/secureshell-python/: challenge_demo.py  config_demo.py  mcp_example.py  templates_demo.py
cookbook/secureshell-ts/: challenge_demo.ts  config_test.ts  mcp_client_demo.ts  mcp_server.ts  package-lock.json  package.json  templates_demo.ts
docs/: README.md  configuration.md  getting-started.md  mcp.md
docs/api/: python.md
docs/api_reference/: typescript.md
docs/features/: gatekeeper.md  platform-awareness.md  risk-classification.md  security-templates.md
docs/integrations/: langchain.md  langgraph.md
docs/providers/: anthropic.md  deepseek.md  gemini.md  groq.md  llamacpp.md  ollama.md  openai.md
examples/: MCP_INTEGRATION.md  config_test.py  langchain_example.py  mcp_config.json  mcp_example.py  profile_performance.py  providers_demo.py  quickstart.py  quickstart.ts
examples/providers/: README.md  anthropic_example.py  gemini_example.py  groq_example.py  llama_cpp_example.py
secureshell/: __init__.py  audit.py  config.py  core.py  gatekeeper.py  models.py  risk_engine.py  sandbox.py  templates.py
secureshell-ts/: .npmignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  secureshell-ts-0.1.0.tgz  tsconfig.json
(+69 files in other folders)
